@@ -1,2 +1,7 @@
 source library/tdbcsqlite3.tcl
+
+package require tcltest
+namespace import -force ::tcltest::*
+#tcltest::match tdbcsqlite3-9.*
+
 source tests/tdbcsqlite3.test
